# PersonalFinanceManager

./: LICENSE  README.md  app.py  pyproject.toml  requirements.txt
agents/: financial_agent.py
deepspeech_model/: download_model.py
rag/: document_store.py  retriever.py
utils/: audio_utils.py  data_utils.py  nlp_utils.py
